--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib"
   ],
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": "git@github.com:delight-rpc/worker-threads.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
