--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "scripts": {
+    "prepare": "ts-patch install -s",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src",
     "test": "jest --no-cache --config jest.config.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "test:coverage": "jest --coverage --config jest.config.js",
     "prepublishOnly": "run-s clean build",
     "clean": "rimraf lib",
-    "build": "run-s build:*",
-    "build:compile": "cross-env NODE_ENV=production tsc --project tsconfig.build.json",
-    "build:patch": "tscpaths --project tsconfig.build.json --src ./src --out ./lib",
+    "build": "cross-env NODE_ENV=production tsc --project tsconfig.build.json",
     "release": "standard-version"
   },
   "husky": {
@@ -49,8 +48,9 @@
     "standard-version": "^9.3.2",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
-    "tscpaths": "^0.0.9",
-    "typescript": "^4.4.4"
+    "ts-patch": "^2.0.1",
+    "typescript": "^4.4.4",
+    "typescript-transform-paths": "^3.3.1"
   },
   "dependencies": {
     "@blackglory/types": "^0.5.2",
