feat: support to close client
BREAKING CHANGE: the return value of createClient changed.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript-transform-paths": "^3.3.1"
   },
   "dependencies": {
+    "@blackglory/errors": "^1.1.2",
     "@blackglory/types": "^0.5.2",
     "delight-rpc": "^0.1.21",
     "extra-promise": "^0.19.1",
