--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
   },
   "devDependencies": {
     "@blackglory/jest-matchers": "^0.1.21",
-    "@commitlint/cli": "^14.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.7",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "cross-env": "^7.0.3",
+    "delight-rpc": "^1.1.1",
     "eslint": "8.2.0",
     "husky": "4",
     "jest": "^27.3.1",
@@ -49,14 +50,15 @@
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "ts-patch": "^2.0.1",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.2",
     "typescript-transform-paths": "^3.3.1"
   },
   "dependencies": {
     "@blackglory/errors": "^1.1.2",
-    "@blackglory/types": "^0.5.2",
-    "delight-rpc": "^0.2.0",
     "extra-promise": "^0.19.1",
     "justypes": "^0.1.6"
+  },
+  "peerDependencies": {
+    "delight-rpc": "^1.1.1"
   }
 }
