--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "husky": "4",
     "jest": "^27.3.1",
     "npm-run-all": "^4.1.5",
+    "return-style": "^0.12.5",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.2",
     "ts-jest": "^27.0.7",
