--- a/package.json
+++ b/package.json
@@ -29,35 +29,36 @@
     }
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=16"
   },
   "devDependencies": {
     "@blackglory/jest-matchers": "^0.1.21",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/jest": "^27.0.3",
-    "@types/node": "14",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@types/node": "16",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "cross-env": "^7.0.3",
-    "delight-rpc": "^1.1.1",
-    "eslint": "8.4.0",
+    "delight-rpc": "^1.1.2",
+    "eslint": "8.4.1",
     "husky": "4",
-    "jest": "^27.4.3",
+    "jest": "^27.4.5",
     "npm-run-all": "^4.1.5",
     "return-style": "^0.12.5",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.2",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "ts-patch": "^2.0.1",
-    "typescript": "^4.5.2",
+    "typescript": "^4.5.4",
     "typescript-transform-paths": "^3.3.1"
   },
   "dependencies": {
     "@blackglory/errors": "^1.1.2",
-    "extra-promise": "^0.19.4",
-    "justypes": "^0.1.6"
+    "extra-promise": "^0.20.0",
+    "justypes": "^0.1.6",
+    "lodash": "^4.17.21"
   },
   "peerDependencies": {
     "delight-rpc": "^1.1.1"
