--- a/package.json
+++ b/package.json
@@ -53,9 +53,7 @@
   },
   "dependencies": {
     "@blackglory/errors": "^1.1.2",
-    "extra-promise": "^0.21.0",
-    "justypes": "^0.1.6",
-    "lodash": "^4.17.21"
+    "extra-promise": "^0.21.0"
   },
   "peerDependencies": {
     "delight-rpc": "^1.2.0"
