--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
   },
   "devDependencies": {
     "@blackglory/jest-matchers": "^0.3.1",
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@types/jest": "^27.4.1",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@types/jest": "^27.5.0",
     "@types/node": "14",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "cross-env": "^7.0.3",
-    "delight-rpc": "^2.1.1",
-    "eslint": "8.12.0",
+    "delight-rpc": "^4.0.0",
+    "eslint": "8.15.0",
     "husky": "4",
     "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
@@ -48,14 +48,16 @@
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "ts-patch": "^2.0.1",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.4",
     "typescript-transform-paths": "^3.3.1"
   },
   "dependencies": {
     "@blackglory/errors": "^2.2.1",
+    "@blackglory/prelude": "^0.1.1",
+    "@delight-rpc/protocol": "^2.2.0",
     "extra-promise": "^1.0.2"
   },
   "peerDependencies": {
-    "delight-rpc": "^2.0.0"
+    "delight-rpc": "^4.0.0"
   }
 }
