--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
   "files": [
     "lib"
   ],
+  "type": "module",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "sideEffects": false,
+  "engines": {
+    "node": ">=16"
+  },
   "repository": "git@github.com:delight-rpc/worker-threads.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
-  "sideEffects": false,
   "scripts": {
     "prepare": "ts-patch install -s",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src",
-    "test": "jest --no-cache --config jest.config.js",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:coverage": "jest --coverage --config jest.config.js",
-    "prepublishOnly": "run-s clean build",
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules --loader ts-node/esm' jest --runInBand --config jest.config.cjs",
+    "test:debug": "cross-env NODE_OPTIONS='--experimental-vm-modules --loader ts-node/esm' node --inspect-brk node_modules/.bin/jest --runInBand --config jest.config.cjs",
+    "prepublishOnly": "run-s prepare clean build",
     "clean": "rimraf lib",
-    "build": "cross-env NODE_ENV=production tsc --project tsconfig.build.json",
+    "build": "tsc --project tsconfig.build.json",
     "release": "standard-version"
   },
   "husky": {
@@ -30,19 +33,21 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
-    "@types/jest": "^29.2.4",
-    "@types/node": "14",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
+    "@blackglory/jest-resolver": "^0.3.0",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@types/jest": "^29.5.0",
+    "@types/node": "16",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "cross-env": "^7.0.3",
-    "delight-rpc": "^5.0.0",
-    "eslint": "8.29.0",
+    "delight-rpc": "^6.0.1",
+    "eslint": "8.36.0",
     "husky": "4",
-    "jest": "^29.3.1",
+    "jest": "^29.5.0",
+    "jest-resolve": "^29.5.0",
     "npm-run-all": "^4.1.5",
-    "return-style": "^1.0.0",
+    "return-style": "^3.0.0",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.3",
@@ -52,12 +57,12 @@
     "typescript-transform-paths": "^3.4.4"
   },
   "dependencies": {
-    "@blackglory/errors": "^2.3.0",
-    "@blackglory/prelude": "^0.1.8",
-    "@delight-rpc/protocol": "^3.0.0",
-    "extra-promise": "^4.4.0"
+    "@blackglory/errors": "^3.0.0",
+    "@blackglory/prelude": "^0.3.1",
+    "@delight-rpc/protocol": "^4.0.0",
+    "extra-promise": "^6.0.5"
   },
   "peerDependencies": {
-    "delight-rpc": "^5.0.0"
+    "delight-rpc": "^5.0.0 || ^6.0.0"
   }
 }
