--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "types": "lib/index.d.ts",
   "sideEffects": false,
   "engines": {
-    "node": ">=16"
+    "node": ">=22"
   },
   "repository": "git@github.com:delight-rpc/worker-threads.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
@@ -20,8 +20,7 @@
   "scripts": {
     "prepare": "ts-patch install -s",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules --loader ts-node/esm' jest --runInBand --config jest.config.cjs",
-    "test:debug": "cross-env NODE_OPTIONS='--experimental-vm-modules --loader ts-node/esm' node --inspect-brk node_modules/.bin/jest --runInBand --config jest.config.cjs",
+    "test": "vitest run",
     "prepublishOnly": "run-s prepare clean build",
     "clean": "rimraf lib",
     "build": "tsc --project tsconfig.build.json",
@@ -34,37 +33,35 @@
     }
   },
   "devDependencies": {
-    "@blackglory/jest-resolver": "^0.3.0",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@types/jest": "^29.5.0",
-    "@types/node": "16",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "cross-env": "^7.0.3",
-    "delight-rpc": "^6.0.1",
-    "eslint": "8.36.0",
+    "@blackglory/wait-for": "^0.8.5",
+    "@commitlint/cli": "^20.4.2",
+    "@commitlint/config-conventional": "^20.4.2",
+    "@eslint/js": "^10.0.1",
+    "@types/node": "22",
+    "delight-rpc": "^7.0.0",
+    "eslint": "10.0.2",
     "husky": "4",
-    "jest": "^29.5.0",
-    "jest-resolve": "^29.5.0",
     "npm-run-all": "^4.1.5",
-    "return-style": "^3.0.0",
-    "rimraf": "^3.0.2",
+    "return-style": "^4.0.0",
+    "rimraf": "^6.1.3",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "ts-patch": "^2.1.0",
-    "typescript": "4.8",
-    "typescript-transform-paths": "^3.4.4"
+    "ts-patch": "^3.3.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.56.1",
+    "typescript-transform-paths": "^3.5.6",
+    "vite": "^7.3.1",
+    "vite-tsconfig-paths": "^6.1.1",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
-    "@blackglory/errors": "^3.0.0",
-    "@blackglory/prelude": "^0.3.1",
+    "@blackglory/errors": "^3.1.0",
+    "@blackglory/prelude": "^0.4.0",
+    "@blackglory/structures": "^0.14.13",
     "@delight-rpc/protocol": "^4.0.0",
-    "extra-abort": "^0.3.2",
-    "extra-promise": "^6.0.5"
+    "extra-abort": "^0.4.1",
+    "extra-promise": "^7.1.1"
   },
   "peerDependencies": {
-    "delight-rpc": "^5.0.0 || ^6.0.0"
+    "delight-rpc": "^5.0.0 || ^6.0.0 || ^7.0.0"
   }
 }
