--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "@eslint/js": "^10.0.1",
     "@types/node": "22",
     "delight-rpc": "^7.0.0",
-    "eslint": "10.0.2",
+    "eslint": "^10.0.2",
     "husky": "4",
     "npm-run-all": "^4.1.5",
     "return-style": "^4.0.0",
     "rimraf": "^6.1.3",
     "standard-version": "^9.5.0",
     "ts-patch": "^3.3.0",
-    "typescript": "5.9.3",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.56.1",
     "typescript-transform-paths": "^3.5.6",
     "vite": "^7.3.1",
