--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@blackglory/structures": "^0.14.13",
     "@delight-rpc/protocol": "^4.0.0",
     "extra-abort": "^0.4.1",
+    "extra-defer": "^0.3.1",
     "extra-promise": "^7.1.1"
   },
   "peerDependencies": {
